# ProjektGKW

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake
include/glad/: glad.h
res/shaders/: f_lamberttextured.glsl  f_simplest.glsl  shader.frag  shader.vert  v_lamberttextured.glsl  v_simplest.glsl
src/: Application.cpp  ApplicationWindow.cpp  ApplicationWindow.h  CameraRenderer.cpp  CameraRenderer.h  ImGuiHandler.cpp  ImGuiHandler.h  Model.cpp  Model.h  Shader.cpp  Shader.h  main.cpp
src/GUI/: GuiWindow.h  HierarchyEditorWindow.cpp  HierarchyEditorWindow.h  LightEditorWindow.cpp  LightEditorWindow.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  ObjectInstantiateWindow.cpp  ObjectInstantiateWindow.h  TransformEditorWindow.cpp  TransformEditorWindow.h
src/core/: ComponentScript.cpp  ComponentScript.h  FrameStats.cpp  FrameStats.h  LightStructs.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Texture.cpp  Texture.h
src/core/Components/: CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  PointLightComponent.cpp  PointLightComponent.h  RotatorComponent.cpp  RotatorComponent.h
src/core/Materials/: ColoredMaterial.cpp  ColoredMaterial.h  TexturedMaterial.cpp  TexturedMaterial.h
src/core/primitives/: Cube.cpp  Cube.h  Teapot.cpp  Teapot.h
src/core/types/: Color.cpp  Color.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h
